-- Almost all changes listed herein are new as of 2016. --

2016-07-25  Bob Weiner  <rsw@gnu.org>

* README: Renamed this file from HY-README.  Moved installation and invocation
   instructions to "INSTALL" file.  These changes were to eliminate release
   problems with INSTALL and README being symbolic links.

* hmouse-tag.el (smart-tags-display): Added with-no-warnings around
   find-tag call to prevent obsolete warnings and removed setting of
   byte-compile-warnings.

2016-07-24  Mats Lidell  <matsl@gnu.org>

* Patch from Stefan Monnier. Thank you Stefan.
  .gitignore: Added *-autoloads.el and *-pkg.el to ignored set.
  hyperbole.el: Fixed autoload typo.
  hload-path.el (load-path): Fixed to use regular quote.
  hib-social.el (require 'hbut): Added to properly compile the defib.

2016-07-23  Bob Weiner  <rsw@gnu.org>

* Makefile (hyperbole-$(HYPB_VERSION).tar): Added HY-ABOUT and HY-ANNOUNCE
    to files installed outside the tar archive for reference.

* man/hyperbole.texi (Installation): Updated to latest version.

2016-07-23  Mats Lidell  <matsl@gnu.org>

* kotl/kotl-loaddefs.el: Generated.

* Makefile (kotl/kotl-loaddefs.el): Added copyright notice for satisfying elpa
    copyright check.
  hyperbole.el: Changed to load kotl/kotl-loaddefs file.

2016-07-22  Bob Weiner  <rsw@gnu.org>

* man/hyperbole.texi: Added new @kitem and @kitemx macros to surround keyboard
    items in tables with braces.

* Makefile (version): Added HY-ANNOUNCE.
  HY-ANNOUNCE: Added release announcement.
  INSTALL:
  HY-NEWS: Small improvements.

* hui-menu.el (infodock-hyperbole-menu): Commented out InfoDock manual reference
    out until InfoDock is modernized for Emacs 25.

* man/hyperbole.texi (Implicit Buttons):
  hib-social.el (social-reference): Improved doc for this ibtype.

* man/hyperbole.texi (Implicit Buttons, Explicit Buttons): Improved clarity.
                     (Global Buttons): Explained how to use global buttons.
