@@ -9,6 +9,7 @@ HY-WHY.kotl         - Quick list of great reasons to use Hyperbole
 INSTALL             - GNU Hyperbole installation and invocation instructions
 Makefile            - Build GNU Hyperbole directories and distributions
 README              - Information GNU Hyperbole users and maintainers should read
+README.md           - Markdown formatted introduction combining README, INSTALL and HY-ABOUT
 hversion.el         - GNU Hyperbole version and system information setup
 hyperbole.el        - Loads and initializes GNU Hyperbole
 hyperbole-readme.txt- Description used by the Emacs package system
