@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <!-- This manual is for GNU Hyperbole
-(Edition 6.0.1, Published July 23, 2016).
+(Edition 6.0.1, Published July 27, 2016).
 
 Copyright (C) 1989-2016  Free Software Foundation, Inc.
 
@@ -321,7 +321,7 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.</P>
 
 <PRE>
 Edition 6.0.1
-Printed July 25, 2016.
+Printed July 27, 2016.
 
   Published by the Free Software Foundation, Inc.
   Author:    Bob Weiner
