@@ -1,4 +1,4 @@
-@set UPDATED July 23, 2016
+@set UPDATED July 27, 2016
 @set UPDATED-MONTH Jul 2016
 @set EDITION 6.0.1
 @set VERSION 6.0.1
